# MyDemoAi

mcp/myMcpServer1/: README.md  main.py  pyproject.toml
mcp/weather_service/: README.md  pyproject.toml
mcp/weather_service/src/weather_service/: wether.py
