[project]
name = "weather-service"
version = "0.1.0"
description = "get weather info"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "httpx>=0.28.1",
 "mcp[cli]>=1.4.1",
]
 

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
weather-service = "weather_service:main"
